# rust-async-scheduler

./: Cargo.toml
.github/: dependabot.yml
.github/workflows/: cargo-build.yaml
src/: event.rs  executor.rs  lib.rs  mailbox.rs  sleep.rs  test_environment.rs  test_utils.rs  time.rs  timer.rs  waker.rs  yield_now.rs  yield_once.rs
src/sync/: mailbox.rs  mod.rs
