[package]
name = "async-scheduler"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1.1"
fugit = "0.3"
futures = { version = "0.3", default-features = false, features = ["async-await"] }
portable-atomic = { version = "1", default-features = false }

[dev-dependencies]
critical-section = { version = "1.1", features = ["std"] }
