[package]
name = "async-scheduler"
version = "0.5.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
critical-section = "1"
futures = { version = "0.3", default-features = false }
portable-atomic = { version = "1", default-features = false }

[dev-dependencies]
critical-section = { version = "1", features = ["std"] }
futures = { version = "0.3", default-features = false, features = ["async-await"] }
